# auth-service

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20241101083324_create_users_table.sql
src/: config.rs  handler.rs  main.rs  response.rs  route.rs  service.rs
